--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
     align-content: center;
     color: #483A58;
     font-family: "Arial", sans-serif;
+    font-size: 24px;
 }
 
 a {
@@ -23,7 +24,8 @@ a {
 }
 
 .title {
-    font-size: 80px;
+    font-size: 90px;
+    font-weight: 100;
     margin: 20px;
 }
 
@@ -41,6 +43,8 @@ a {
     padding: 0;
     overflow: hidden;
     background-color: #483A58;
+    font-weight: bold;
+    font-size: 36px;
 }
 
 .nav_bar li {
@@ -73,7 +77,7 @@ a {
 .footer {
     background-color: #483A58;
     color: #FCEAFF;
-    font-size: 11px;
+    font-size: 16px;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 20px;
