--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ a {
     flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
     background-color: #00C9AA;
     margin-top: 30px;
     padding-top: 10px;
@@ -35,6 +36,7 @@ a {
     padding-left: 30px;
     padding-right: 30px;
     height: 150px;
+    width: 150px;
 }
 
 .nav_bar {
