--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     align-content: center;
     color: #483A58;
     font-family: "Arial", sans-serif;
-    font-size: 24px;
+    font-size: 30px;
 }
 
 a {
@@ -44,29 +44,27 @@ a {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #00C9AA;
-    font-weight: bold;
-    font-size: 36px;
+    background-color: #483A58;
+    font-size: 40px;
+    border-width: 10px;
+    border-color: #483A58;
+    border-top-style: solid;
+    border-bottom-style: solid;
 }
 
 .nav_bar li {
-    background-color: #483A58;
-    border-radius: 15px 15px 0px 0px;
     float: left;
 }
 
 .nav_bar li a {
     display: block;
     text-align: center;
-    color: #FCEAFF;
-    padding: 14px 16px;
+    padding: 0px 30px;
     text-decoration: none;
-}
-
-.nav_bar .current a {
-    background-color: #FCEAFF;
-    color: #483A58;
-    border-radius: 15px 15px 0px 0px;
+    color: #FCEAFF;
+    border-right-color: #FCEAFF;
+    border-right-style: solid;
+    border-right-width: 2px;
 }
 
 .contents {
@@ -80,13 +78,15 @@ a {
 }
 
 .footer {
-    background-color: #483A58;
-    color: #FCEAFF;
-    font-size: 16px;
+    background-color: #00C9AA;
+    font-size: 20px;
+    font-weight: bold;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 20px;
     padding-right: 20px;
     margin-top: 0px;
+    margin-bottom: 0px;
     text-align: center;
+    height: 100%;
 }
