--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ a {
     flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     background-color: #00C9AA;
     margin-top: 30px;
     padding-top: 10px;
@@ -40,9 +40,13 @@ a {
 }
 
 .nav_bar {
+    display: flex;
+    justify-content: center;
     list-style-type: none;
     margin: 0;
     padding: 0;
+    padding-left: 10px;
+    padding-right: 10px;
     overflow: hidden;
     background-color: #483A58;
     font-size: 40px;
@@ -54,6 +58,9 @@ a {
 
 .nav_bar li {
     float: left;
+    border-left-color: #FCEAFF;
+    border-left-style: solid;
+    border-left-width: 2px;
 }
 
 .nav_bar li a {
@@ -62,6 +69,9 @@ a {
     padding: 0px 30px;
     text-decoration: none;
     color: #FCEAFF;
+}
+
+.right_nav_button {
     border-right-color: #FCEAFF;
     border-right-style: solid;
     border-right-width: 2px;
