--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,7 @@ table {
 }
 
 .contact_table {
-    padding: 30px;
+    padding: 0px 30px;
 }
 
 .contact_icon_cell {
@@ -125,6 +125,18 @@ table {
 .contact_icon {
     width: 50px;
     height: 50px;
+}
+
+.profile_list {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    list-style-type: none;
+}
+
+.profile_list li {
+    padding-bottom: 10px;
 }
 
 .footer {
