--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     margin: auto;
     align-content: center;
     color: var(--dark-colour);
-    font-family: "Arial", sans-serif;
+    font-family: "Verdana", "Arial", sans-serif;
     font-size: 20px;
 }
 
@@ -45,7 +45,7 @@ table {
 }
 
 .title {
-    font-size: 90px;
+    font-size: 85px;
     font-weight: 100;
     margin: 0px;
     margin-bottom: 10px;
@@ -143,7 +143,6 @@ table {
     background-color: var(--dark-colour);
     color: var(--light-colour);
     font-size: 20px;
-    font-weight: bold;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 20px;
