--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,25 @@
 :root {
-    --dark-colour: #000000;
-    --lighter-colour: #D4D3D3;
-    --light-colour: #FDFFFC;
-    --contrasting-colour: #A51414;
+    --background-colour: #A51414;
+    --header-colour: #D4D3D3;
+    --footer-colour: #000000;
+    --navbar-colour: #000000;
+    --content-colour: #D4D3D3;
+    --dark-font-colour: #000000;
+    --light-font-colour: #FDFFFC;
+    --link-font-colour: #A51414;
 }
 
 body {
-    background-color: var(--contrasting-colour);
+    background-color: var(--background-colour);
     max-width: 750px;
     margin: auto;
     align-content: center;
-    color: var(--dark-colour);
     font-family: "Verdana", "Arial", sans-serif;
     font-size: 20px;
 }
 
 a {
-    color: var(--contrasting-colour);
+    color: var(--link-font-colour);
 }
 
 table {
@@ -29,7 +32,7 @@ table {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    background-color: var(--lighter-colour);
+    background-color: var(--header-colour);
     margin-top: 30px;
     padding-top: 10px;
     padding-bottom: 0px;
@@ -75,17 +78,17 @@ table {
     padding-left: 10px;
     padding-right: 10px;
     overflow: hidden;
-    background-color: var(--dark-colour);
+    background-color: var(--navbar-colour);
     font-size: 40px;
     border-width: 10px;
-    border-color: var(--dark-colour);
+    border-color: var(--navbar-colour);
     border-top-style: solid;
     border-bottom-style: solid;
 }
 
 .nav_bar li {
     float: left;
-    border-left-color: var(--light-colour);
+    border-left-color: var(--light-font-colour);
     border-left-style: solid;
     border-left-width: 2px;
 }
@@ -95,17 +98,17 @@ table {
     text-align: center;
     padding: 0px 30px;
     text-decoration: none;
-    color: var(--light-colour);
+    color: var(--light-font-colour);
 }
 
 .right_nav_button {
-    border-right-color: var(--light-colour);
+    border-right-color: var(--light-font-colour);
     border-right-style: solid;
     border-right-width: 2px;
 }
 
 .contents {
-    background-color: var(--lighter-colour);
+    background-color: var(--content-colour);
     color: var(--dark-colour);
     min-height: 300px;
     padding-top: 5px;
@@ -140,8 +143,8 @@ table {
 }
 
 .footer {
-    background-color: var(--dark-colour);
-    color: var(--light-colour);
+    background-color: var(--footer-colour);
+    color: var(--light-font-colour);
     font-size: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
