--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
-    --background-colour: #A51414;
-    --header-colour: #D4D3D3;
-    --footer-colour: #000000;
+    --background-colour: #000000;
+    --header-colour: #A51414;
+    --footer-colour: #A51414;
     --navbar-colour: #000000;
     --content-colour: #D4D3D3;
     --dark-font-colour: #000000;
@@ -33,6 +33,7 @@ table {
     align-items: center;
     justify-content: center;
     background-color: var(--header-colour);
+    color: var(--light-font-colour);
     margin-top: 30px;
     padding-top: 10px;
     padding-bottom: 0px;
