--- a/styles.css
+++ b/styles.css
@@ -130,29 +130,21 @@ table {
     padding: 1px;
 }
 
-.contact_table {
-    padding: 0px 30px;
-}
-
-.contact_icon_cell {
-    padding: 10px 20px;
-}
-
-.contact_icon {
-    width: 50px;
-    height: 50px;
+.email {
+    text-align: center;
 }
 
 .profile_list {
     display: flex;
-    flex-direction: column;
-    justify-items: center;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
     list-style-type: none;
+    margin-top: 10px;
 }
 
 .profile_list li {
-    padding-bottom: 10px;
+    padding-right: 10px;
 }
 
 .footer {
@@ -167,4 +159,8 @@ table {
     margin-bottom: 30px;
     text-align: center;
     height: 100%;
+}
+
+.footer a {
+    color: var(--light-font-colour);
 }
