Increase font size of contact list.

--- a/styles.css
+++ b/styles.css
@@ -141,6 +141,7 @@ table {
     align-items: center;
     list-style-type: none;
     margin-top: 10px;
+    font-size: 30px;
 }
 
 .profile_list li {
