--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
     max-width: 800px;
     margin: auto;
     align-content: center;
-    font-family: "Verdana", "Arial", sans-serif;
+    font-family: 'Lexend Deca', "Arial", sans-serif;
     font-size: 20px;
 }
 
