--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,33 @@
     --link-font-colour: #A51414;
 }
 
+html {
+    height: 100%;
+}
+
 body {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
     background-color: var(--background-colour);
-    max-width: 800px;
     margin: auto;
     align-content: center;
     font-family: 'Lexend Deca', "Arial", sans-serif;
     font-size: 16px;
     line-height: 1.6;
+}
+
+.contents {
+    margin: auto;
+    max-width: 800px;
+    padding: 20px 40px;
+}
+
+.contents_wrapper {
+    flex-grow: 1;
+    background-color: var(--content-colour);
+    color: var(--dark-colour);
+    text-align: justify;
 }
 
 a {
@@ -35,7 +54,6 @@ table {
     justify-content: center;
     background-color: var(--header-colour);
     color: var(--light-font-colour);
-    margin-top: 30px;
     padding-top: 10px;
     padding-bottom: 0px;
 }
@@ -49,16 +67,18 @@ table {
     margin: 20px;
 }
 
-.title {
+h1 {
     font-size: 85px;
     font-weight: 100;
-    margin: 0px;
     line-height: 1;
 }
 
-.subtitle {
+h2 {
     font-size: 40px;
     font-weight: 100;
+}
+
+.header_text h1, .header_text h2 {
     margin: 0px;
 }
 
@@ -71,13 +91,11 @@ table {
 
 .nav_bar {
     display: flex;
-    justify-content: center;
     list-style-type: none;
     margin: 0;
     padding: 0;
     padding-left: 10px;
     padding-right: 10px;
-    overflow: hidden;
     background-color: var(--navbar-colour);
     font-size: 24px;
     border-width: 10px;
@@ -87,34 +105,36 @@ table {
 }
 
 .nav_bar li {
-    float: left;
+    flex-grow: 1;
     border-left-color: var(--light-font-colour);
     border-left-style: solid;
     border-left-width: 2px;
 }
 
+.nav_bar li:last-child {
+    border-right-style: none;
+}
+
+.nav_bar li:first-child {
+    border-left-style: none;
+}
+
 .nav_bar li a {
     display: block;
     text-align: center;
-    padding: 0px 40px;
     text-decoration: none;
     color: var(--light-font-colour);
 }
 
-.right_nav_button {
-    border-right-color: var(--light-font-colour);
-    border-right-style: solid;
-    border-right-width: 2px;
-}
 
-.contents {
-    background-color: var(--content-colour);
-    color: var(--dark-colour);
-    text-align: justify;
-    padding: 12px 40px;
+@media only screen and (max-width: 650px) {
+    .portfolio_source_image {
+        display: none;
+    }
 }
 
 .portfolio_table td {
+    text-align: left;
     height: 50px;
     vertical-align: middle;
 }
@@ -153,9 +173,7 @@ table {
     padding-left: 20px;
     padding-right: 20px;
     margin-top: 0px;
-    margin-bottom: 30px;
     text-align: center;
-    height: 100%;
 }
 
 .footer a {
