--- a/styles.css
+++ b/styles.css
@@ -83,8 +83,8 @@ h2 {
 }
 
 .headshot {
-    height: 150px;
-    width: 150px;
+    height: 250px;
+    width: auto;
     float: right;
     padding: 18px 0 0 24px;
 }
