Add right padding to portfolio table.

--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,7 @@ h2 {
 
 .portfolio_table td {
     padding-left: 15px;
+    padding-right: 15px;
     text-align: left;
     height: 50px;
     vertical-align: middle;
